--- a/Photography.html
+++ b/Photography.html
@@ -31,10 +31,12 @@
   </div>
   <div class="top">
     <div class="top-text">
-      <p>Photography</p>
-      
+      <p>Photography
+      </p>
+
     </div>
   </div>
+
 </body>
 
 </html>
