--- a/Photography.html
+++ b/Photography.html
@@ -35,6 +35,28 @@
       </p>
 
     </div>
+    <!-- Photo Wall -->
+    <div class="photo-wall">
+      <div class="photo-grid">
+        <div class="photo-item">
+          <img src="img/photo1.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/photo2.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/photo3.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/photo4.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/photo5.jpg" alt="">
+        </div>
+        <!-- 直接继续复制 photo-item 就行 -->
+      </div>
+    </div>
+
   </div>
 
 </body>
