--- a/Photography.html
+++ b/Photography.html
@@ -39,25 +39,53 @@
     <div class="photo-wall">
       <div class="photo-grid">
         <div class="photo-item">
-          <img src="img/photo1.jpg" alt="">
+          <img src="img/10443943021d3ccba76b1785e6f88e03.jpg" alt="">
         </div>
         <div class="photo-item">
-          <img src="img/photo2.jpg" alt="">
+          <img src="img/462e277fc5f5659eb4acf16911828864.jpg" alt="">
         </div>
         <div class="photo-item">
-          <img src="img/photo3.jpg" alt="">
+          <img src="img/f1565752adc2175a39cfe7554a430b74.jpg" alt="">
         </div>
         <div class="photo-item">
-          <img src="img/photo4.jpg" alt="">
+          <img src="img/70e589620b0c32174ba67f1f795c4e20.jpg" alt="">
         </div>
         <div class="photo-item">
-          <img src="img/photo5.jpg" alt="">
+          <img src="img/b1a5176c588aff28cd234906c422fb1a.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/c03172927b919ad7ae74883326c02cda.jpg" alt="">
+        </div>
+        <div class="photo-item">
+
+          <img src="img/6966cdf28586fad54cc07048e6500c7b.jpg" alt="">
+        </div>
+        <div class="photo-item">
+          <img src="img/9458e464f3ffc896d07b35108e4d5a15.jpg" alt="">
         </div>
         <!-- 直接继续复制 photo-item 就行 -->
       </div>
     </div>
 
   </div>
+  <footer class="footer">
+    <div class="footer-content">
+      <p>© 2026 Meiyi Lv. All Rights Reserved.</p>
+      <p>
+        Built with Designed & Developed ·
+        <a href="">Contact Me</a>
+      </p>
+    </div>
+    <div class="back">
+      <a href="/index.html" class="back-button" aria-label="Back">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M15 6L9 12L15 18" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+        <span>Back</span>
+      </a>
+    </div>
+  </footer>
 
 </body>
 
