--- a/game/html/index.html
+++ b/game/html/index.html
@@ -39,6 +39,16 @@
     </div>
   </div>
   <script src="../js/game.js"></script>
+</body>
+<!-- Back Button -->
+<a href="/Project.html" class="back-button" aria-label="Back">
+  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <path d="M15 6L9 12L15 18" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"
+      stroke-linejoin="round" />
+  </svg>
+  <span>Back</span>
+</a>
+
 
 
 </html>
