--- a/About.html
+++ b/About.html
@@ -99,13 +99,13 @@
           grow. It
           doesn't need to be perfect; it just needs to be honest and allow me to move forward, step by step. For a long
           time,
-          though, I didn't have a clear direction. That changed during my internship at Boeing. There, I met Eric, who
+          though, I didn't have a clear direction. That changed during my internship at Boeing. There, I met Eric Zhang, who
           studied
           abroad and brought a completely different perspective. He inspired me deeply, helped me strengthen my
           weaknesses, shared
           experiences and ways of thinking that no textbook could teach, and showed me what real depth looks like.
           <ul></ul>
-          Another person who had a profound impact on me at Boeing was my senior manager, Dou. When I felt uncertain
+          Another person who had a profound impact on me at Boeing was my senior manager, Ben Dou. When I felt uncertain
           about my
           future career, he gave me guidance at a critical moment. Unlike teachers in school who often speak in abstract
           terms, he
