--- a/Contact Me.html
+++ b/Contact Me.html
@@ -32,7 +32,7 @@
     <div class="content">
       <div class="contact-info">
         <p class="contact-text">Feel free to reach out to me via email or connect with me on social media!</p>
-        <p class="contact-item">Email: <a href="mailto:lvmeiyixixi@gmail.com">mailto:lvmeiyixixi@gmail.com</a></p>
+        <p class="contact-item">Email: <a href="mailto:lvmeiyixixi@gmail.com">lvmeiyixixi@gmail.com</a></p>
       </div>
     </div>
       <footer class="footer">
