--- a/Contact Me.html
+++ b/Contact Me.html
@@ -9,43 +9,45 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
-  <body>
-    <div class="header">
-      <div class="header-left">
-        <div class="header-left-text"> <a href="index.html">MEIYI LV</a> </div>
-      </div>
-      <div class="header-right">
-        <ul class="nav">
-          <li><a href="/About.html">About</a></li>
-          <li><a href="/Project.html">Project</a></li>
-          <li><a href="/Channel.html">Channel</a></li>
-          <li><a href="/Photography.html">Photography</a></li>
-          <li><a href="/Contact Me.html">Contact Me</a></li>
-          <li class="divider">|</li>
-      </div>
+<body>
+  <div class="header">
+    <div class="header-left">
+      <div class="header-left-text"> <a href="index.html">MEIYI LV</a> </div>
     </div>
-    <div class="top">
-      <div class="top-text">
-        <p class="top-title">Contact Me</p>
-      </div>
+    <div class="header-right">
+      <ul class="nav">
+        <li><a href="/About.html">About</a></li>
+        <li><a href="/Project.html">Project</a></li>
+        <li><a href="/Channel.html">Channel</a></li>
+        <li><a href="/Photography.html">Photography</a></li>
+        <li><a href="/Contact Me.html">Contact Me</a></li>
+        <li class="divider">|</li>
     </div>
-    <div class="content">
-      <div class="contact-info">
-        <p class="contact-text">Feel free to reach out to me via email or connect with me on social media!</p>
-        <p class="contact-item">Email: <a href="mailto:lvmeiyixixi@gmail.com">lvmeiyixixi@gmail.com</a></p>
-      </div>
+  </div>
+  <div class="top">
+    <div class="top-text">
+      <p class="top-title">Contact Me</p>
     </div>
-      <footer class="footer">
-        <div class="footer-content">
-          <p>© 2026 Meiyi Lv. All Rights Reserved.</p>
-          <p> Built with Designed & Developed · <a href="">Contact Me</a> </p>
-        </div>
-        <div class="back"> <a href="/index.html" class="back-button" aria-label="Back"> <svg viewBox="0 0 24 24"
-              fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path d="M15 6L9 12L15 18" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg> <span>Back</span> </a> </div>
-      </footer>
-  </body>
+  </div>
+  <div class="content">
+    <div class="contact-info">
+      <p class="contact-text">Feel free to reach out to me via email or connect with me on social media!</p>
+      <p class="contact-item">Email: <a href="mailto:lvmeiyixixi@gmail.com">lvmeiyixixi@gmail.com</a></p>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="footer-content">
+      <p>© 2026 Meiyi Lv. All Rights Reserved.</p>
+      <p> Built with Designed & Developed · <a href="">Contact Me</a> </p>
+    </div>
+    <div class="back"> <a href="/index.html" class="back-button" aria-label="Back"> <svg viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M15 6L9 12L15 18" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+        <span>Back</span> </a>
+    </div>
+  </footer>
+</body>
 
-  </html>
+</html>
