--- a/About.html
+++ b/About.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/img/124567.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/124567.jpg" type="image/x-icon">
 
 </head>
 
@@ -99,7 +101,8 @@
           grow. It
           doesn't need to be perfect; it just needs to be honest and allow me to move forward, step by step. For a long
           time,
-          though, I didn't have a clear direction. That changed during my internship at Boeing. There, I met Eric Zhang, who
+          though, I didn't have a clear direction. That changed during my internship at Boeing. There, I met Eric Zhang,
+          who
           studied
           abroad and brought a completely different perspective. He inspired me deeply, helped me strengthen my
           weaknesses, shared
