--- a/Project.html
+++ b/Project.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/img/124567.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/124567.jpg" type="image/x-icon">
 </head>
 
 <body>
