--- a/Checkindex.html
+++ b/Checkindex.html
@@ -75,7 +75,7 @@
   <footer class="footer">
     <div class="footer-content">
       <p>© 2026 Meiyi Lv. All Rights Reserved.</p>
-      <p>Built with Designed & Developed · <a href="">Contact Me</a></p>
+      <p>Built with Designed & Developed · <a href="/Contact Me.html">Contact Me</a></p>
     </div>
     <div class="back">
       <a href="/Project.html" class="back-button" aria-label="Back">
