--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>© 2026 Meiyi Lv. All Rights Reserved.</p>
         <p>
           Built with Designed & Developed ·
-          <a href="">Contact Me</a>
+          <a href="/Contact Me.html">Contact Me</a>
         </p>
       </div>
     </footer>
