--- a/About.html
+++ b/About.html
@@ -90,7 +90,7 @@
           the way, I
           met Xiaoyun Li, Xinshuo Ji, Wei Li, Zichen Wang, Bo Qu, and Chang Wei. They are more than classmates or
           collaborators to
-          me; they are friends, even family. Programming, for me, is not just about writing code. It's a way to train my
+          me; they are friends, even familys. Programming, for me, is not just about writing code. It's a way to train my
           thinking,
           solve problems, and learn patience.
         </ul>
