--- a/Photography.html
+++ b/Photography.html
@@ -41,7 +41,7 @@
     <div class="photo-wall">
       <div class="photo-grid">
         <div class="photo-item">
-          <img src="img/10443943021d3ccba76b1785e6f88e03.jpg" alt="">
+          <!-- <img src="img/10443943021d3ccba76b1785e6f88e03.jpg" alt="">
         </div>
         <div class="photo-item">
           <img src="img/462e277fc5f5659eb4acf16911828864.jpg" alt="">
@@ -64,7 +64,7 @@
         </div>
         <div class="photo-item">
           <img src="img/9458e464f3ffc896d07b35108e4d5a15.jpg" alt="">
-        </div>
+        </div> -->
         <!-- 直接继续复制 photo-item 就行 -->
       </div>
     </div>
